# uob-ublas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  analysis.py  flags  makefile  speedup  times  training-samples-accuracy
nets/: full-50-500-100.netclear
src/: driver.c  driver.h  matrix.c  matrix.h  tests.c  tests.h  ublas.c  ublas.h  ublas_constants.h  ublas_lib_cblas.c  ublas_lib_cblas.h  ublas_lib_plasma.c  ublas_types.h  utils.c  utils.h
src/drivers/atlas/: CMakeLists.txt  atlas.c  atlas.h
src/drivers/cublas/: CMakeLists.txt  cublas.c  cublas.h
src/drivers/mkl/: CMakeLists.txt  mkl.c  mkl.h
src/drivers/plasma/: CMakeLists.txt  plasma.c  plasma.h
src/tests/: accuracy.c  demo.c  measure.c  query.c  run.c
src/tools/: test-fann.c  train-fann.c  train-nn.c
src/unittests/: unittests.c
